# mubo

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: publish.yml
src/: index.rs  link.rs  main.rs  templates.rs
