[package]
name = "mubo"
version = "0.1.6"
edition = "2021"
authors = ["Adrian Tombu <adrian@otso.fr>"]
keywords = ["generator", "static", "shortener", "url"]
categories = ["command-line-utilities", "value-formatting", "web-programming"]
description = "A static url shortener generator"
license = "MIT"
repository = "https://github.com/adriantombu/mubo"
include = ["/src", "LICENSE.md", "README.md"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
tinytemplate = "1.2"
toml = "0.7"
